objects/PurchaseRequestMatrix__c.object
<CustomObject>
    <customSettingsType>List</customSettingsType>
    <customSettingsVisibility>Public</customSettingsVisibility>
    <fields>
        <fullName>GoldMaintenancePartNumber__c</fullName>
        <label>Gold Maintenance Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>GoldMaintenancePrice__c</fullName>
        <label>Gold Maintenance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>PartNumber__c</fullName>
        <label>Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatinumMaintenancePartNumber__c</fullName>
        <label>Platinum Maintenance Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>PlatinumMaintenancePrice__c</fullName>
        <label>Platinum Maintenance Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Price__c</fullName>
        <label>Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>SubscriptionPartNumber__c</fullName>
        <label>Subscription Part Number</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SubscriptionPrice__c</fullName>
        <label>Subscription Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <label>Purchase Request Matrix</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>Price__c</columns>
        <columns>PartNumber__c</columns>
        <columns>GoldMaintenancePrice__c</columns>
        <columns>GoldMaintenancePartNumber__c</columns>
        <columns>PlatinumMaintenancePrice__c</columns>
        <columns>PlatinumMaintenancePartNumber__c</columns>
        <columns>SubscriptionPrice__c</columns>
        <columns>SubscriptionPartNumber__c</columns>
        <filterScope>Everything</filterScope>
        <label>All</label>
    </listViews>
</CustomObject>